# Compiler

./: .gitignore  CMakeLists.txt  README.md  defination.cpp  lexicalAnalysis.cpp  lexicalAnalysis.h  main.cpp  output.txt  testfile.txt  word.cpp  word.h
class/: errorType.cpp  instr.cpp  memory.cpp  symbol.cpp  syntax.cpp  word.cpp
codeGeneration/: codeGeneration.cpp
grammaAnalysis/: grammaAnalysis.cpp
include/: codeGeneration.h  errorType.h  grammaAnalysis.h  instr.h  interpreter.h  lexicalAnalysis.h  memory.h  symbol.h  syntax.h  syntaxAnalysis.h  word.h
interpreter/: interpreter.cpp
lexicalAnalysis/: lexicalAnalysis.cpp
settings/: defination.h
syntaxAnalysis/: syntaxAnalysis.cpp
设计文档/: 编译器设计文档.md  编译器设计文档2.md
